# Steganography_proj

./: .gitignore  CMakeLists.txt  README.md  main.cpp
BMP_Coder/: BMP_Class.hpp
Steganography_methods/: Console_comands.hpp  Methods_file.hpp  crypt_methods.hpp
TGA_Coder/: TGA_Class.hpp
images/: Bez_nazwy.tga  tgaTest2.tga
